Fixed long instantiation in DelayInformationProvider